# gl-aip-sdk-cookbook

./: .gitignore  README.md
examples/filesystem-middleware/: .env.example  00_quick_start.py  01_file_discovery.py  02_file_lifecycle.py  03_data_pipeline.py  04_codebase_analysis.py  05_security_audit.py  06_tool_output_eviction.py  07_sandbox_execute.py  README.md  pyproject.toml
examples/filesystem-middleware/data/: sales_q3.csv  sales_summary.csv
examples/filesystem-middleware/data/src/: api_client.py  auth_service.py  config_loader.py  database_config.py  safe_module.py  user_repository.py
examples/filesystem-middleware/data/tests/: test_auth.py
examples/filesystem-middleware/data/workspace/: notes.md  report_q1.md  report_q2.md
examples/filesystem-middleware/data/workspace/reports/: q3_summary.md
examples/hello-world/: README.md  main_with_hermes_skills_remote.py
examples/hello-world-local/: .env.example  README.md  main_with_hermes_skills.py  pyproject.toml
examples/programmatic-tool-calling/: .env.example  .gitignore  README.md  compare_runs_budget.py  main_with_ptc_remote.py  main_without_ptc_remote.py
examples/tool-state-handoff-local/: .gitignore  README.md  main.py  pyproject.toml
examples/tool-state-handoff-local/tools/: __init__.py  load_case_file.py  reveal_verification_code.py
