[project]
name = "tool-state-handoff-local"
version = "0.1.0"
description = "Local PoC for raw-state handoff through agent metadata"
requires-python = ">=3.12,<3.13"
dependencies = [
    "glaip-sdk[local]>=0.8",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
